# thriftservice

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp  multiplication.thrift
